# config/swagger.json
@@ -24,6 +24,38 @@
               "items": {
                 "$ref": "#/definitions/customer-output"
               }
+            },
+            "examples": {
+              "application/json": [
+                {
+                  "id": "ipsum cillum",
+                  "name": "occaecat eiusmod ex",
+                  "active": true,
+                  "date_created": "1945-11-21T14:30:32.642Z",
+                  "date_updated": "1939-09-26T04:54:11.370Z"
+                },
+                {
+                  "id": "qui elit",
+                  "name": "non consequ",
+                  "active": false,
+                  "date_created": "1982-10-10T08:27:10.549Z",
+                  "date_updated": "1969-07-04T01:52:52.192Z"
+                },
+                {
+                  "id": "in ipsum anim",
+                  "name": "veniam nostrud nisi voluptate magna",
+                  "active": false,
+                  "date_created": "1979-11-21T03:48:10.831Z",
+                  "date_updated": "1946-02-04T03:21:49.296Z"
+                },
+                {
+                  "id": "Ut nulla minim",
+                  "name": "eu pariatur",
+                  "active": true,
+                  "date_created": "1944-02-08T06:55:06.810Z",
+                  "date_updated": "1983-12-16T08:24:57.184Z"
+                }
+              ]
             }
           }
         },
@@ -46,6 +78,12 @@
             "name": "body",
             "schema": {
               "$ref": "#/definitions/customer-input"
+            },
+            "x-examples": {
+              "application/json": {
+                "name": "dolore tempor nulla laboris",
+                "active": true
+              }
             }
           }
         ],
@@ -54,6 +92,15 @@
             "description": "",
             "schema": {
               "$ref": "#/definitions/customer-output-detailed"
+            },
+            "examples": {
+              "application/json": {
+                "id": "a1b2c3d4e5f678",
+                "name": "dolore tempor nulla laboris",
+                "active": true,
+                "date_created": "1957-06-10T21:31:33.691Z",
+                "date_updated": ""
+              }
             }
           }
         },
@@ -127,28 +174,27 @@
       "description": "Заказчик или спонсор исследования",
       "type": "object",
       "properties": {
-        "id": {
-          "type": "string"
-        },
         "name": {
-          "type": "string"
-        },
-        "dateCreated": {
           "type": "string",
-          "format": "date-time"
+          "description": "Наименование заказчика"
         },
-        "dateUpdated": {
+        "date_created": {
           "type": "string",
-          "format": "date-time"
+          "format": "date-time",
+          "description": "Дата создания"
+        },
+        "date_updated": {
+          "type": "string",
+          "format": "date-time",
+          "description": "Дата последнего редактирования"
         },
         "active": {
-          "type": "boolean"
+          "type": "boolean",
+          "description": "Признак активности"
         }
       },
       "required": [
-        "id",
         "name",
-        "dateCreated",
         "active"
       ]
     },
@@ -171,7 +217,15 @@
       "allOf": [
         {
           "type": "object",
-          "properties": {}
+          "properties": {
+            "id": {
+              "type": "string",
+              "description": "Идентификатор"
+            }
+          },
+          "required": [
+            "id"
+          ]
         },
         {
           "$ref": "#/definitions/customer-common"
